--- a/index.html
+++ b/index.html
@@ -99,16 +99,7 @@
 <script src="https://www.gstatic.com/firebasejs/5.9.0/firebase-database.js"></script>
 
 <script>
-    // Initialize Firebase
-    var config = {
-        apiKey: "AIzaSyAojvNUJsTRqybVNTtdVXy7OU-rFzvArZs",
-        authDomain: "etgiwp-3ea49.firebaseapp.com",
-        databaseURL: "https://etgiwp-3ea49.firebaseio.com",
-        projectId: "etgiwp-3ea49",
-        storageBucket: "",
-        messagingSenderId: "663211726205"
-    };
-    firebase.initializeApp(config);
+    // Firebase tarafından alınan Real Time Database bilgileri gelecektir.
 </script>
 
 <script src="islemler.js"></script>
